@@ -21,7 +21,7 @@ The patch also adds support for "kdeinit" resource type to KDE Platform
 libraries.
 --- a/CreateKDELibsDependenciesFile.cmake
 +++ b/CreateKDELibsDependenciesFile.cmake
-@@ -32,6 +32,7 @@ set(KDE4_INSTALL_DIR "${CMAKE_INSTALL_PR
+@@ -32,6 +32,7 @@
  make_install_path_absolute(KDE4_LIB_INSTALL_DIR     ${LIB_INSTALL_DIR})
  make_install_path_absolute(KDE4_IMPORTS_INSTALL_DIR     ${IMPORTS_INSTALL_DIR})
  make_install_path_absolute(KDE4_LIBEXEC_INSTALL_DIR ${LIBEXEC_INSTALL_DIR})
@@ -29,7 +29,7 @@ libraries.
  make_install_path_absolute(KDE4_INCLUDE_INSTALL_DIR ${INCLUDE_INSTALL_DIR})
  make_install_path_absolute(KDE4_BIN_INSTALL_DIR     ${BIN_INSTALL_DIR})
  make_install_path_absolute(KDE4_SBIN_INSTALL_DIR    ${SBIN_INSTALL_DIR})
-@@ -65,6 +66,7 @@ endif (NOT KDE4_INSTALL_DIR)
+@@ -65,6 +66,7 @@
  set(KDE4_LIB_INSTALL_DIR     \"${KDE4_LIB_INSTALL_DIR}\")
  set(KDE4_IMPORTS_INSTALL_DIR     \"${KDE4_IMPORTS_INSTALL_DIR}\")
  set(KDE4_LIBEXEC_INSTALL_DIR \"${KDE4_LIBEXEC_INSTALL_DIR}\")
@@ -39,7 +39,7 @@ libraries.
  set(KDE4_SBIN_INSTALL_DIR    \"${KDE4_SBIN_INSTALL_DIR}\")
 --- a/cmake/modules/FindKDE4Internal.cmake
 +++ b/cmake/modules/FindKDE4Internal.cmake
-@@ -871,6 +871,7 @@ else (WIN32)
+@@ -871,6 +871,7 @@
     _set_fancy(INCLUDE_INSTALL_DIR  "${CMAKE_INSTALL_PREFIX}/include"         "The subdirectory to the header prefix")
  
     _set_fancy(PLUGIN_INSTALL_DIR       "${LIB_INSTALL_DIR}/kde4"                "The subdirectory relative to the install prefix where plugins will be installed (default is ${LIB_INSTALL_DIR}/kde4)")
@@ -47,7 +47,7 @@ libraries.
     _set_fancy(IMPORTS_INSTALL_DIR       "${PLUGIN_INSTALL_DIR}/imports"                "The subdirectory relative to the install prefix where imports will be installed")
     _set_fancy(CONFIG_INSTALL_DIR       "${SHARE_INSTALL_PREFIX}/config"         "The config file install dir")
     _set_fancy(DATA_INSTALL_DIR         "${SHARE_INSTALL_PREFIX}/apps"           "The parent directory where applications can install their data")
-@@ -1332,6 +1333,10 @@ if (CMAKE_C_COMPILER MATCHES "icc")
+@@ -1332,6 +1333,10 @@
  
  endif (CMAKE_C_COMPILER MATCHES "icc")
  
@@ -60,7 +60,7 @@ libraries.
  
 --- a/cmake/modules/KDE4Macros.cmake
 +++ b/cmake/modules/KDE4Macros.cmake
-@@ -810,6 +810,17 @@ macro (KDE4_ADD_KDEINIT_EXECUTABLE _targ
+@@ -819,6 +819,17 @@
        set_target_properties(kdeinit_${_target_NAME} PROPERTIES OUTPUT_NAME kdeinit4_${_target_NAME})
  
        kde4_add_executable(${_target_NAME} "${_nogui}" ${CMAKE_CURRENT_BINARY_DIR}/${_target_NAME}_dummy.cpp)
@@ -80,7 +80,7 @@ libraries.
  
 --- a/kinit/CMakeLists.txt
 +++ b/kinit/CMakeLists.txt
-@@ -58,6 +58,17 @@ endif(Q_WS_X11)
+@@ -58,6 +58,17 @@
  
  install(TARGETS kdeinit4 ${INSTALL_TARGETS_DEFAULT_ARGS} )
  
@@ -110,7 +110,7 @@ libraries.
  #define INCLUDE_INSTALL_DIR "${INCLUDE_INSTALL_DIR}"
 --- a/kdecore/kde-config.cpp
 +++ b/kdecore/kde-config.cpp
-@@ -144,6 +144,7 @@ int main(int argc, char **argv)
+@@ -144,6 +144,7 @@
              "html", I18N_NOOP("HTML documentation"),
              "icon", I18N_NOOP("Icons"),
              "kcfg", I18N_NOOP("Configuration description files"),
@@ -120,7 +120,7 @@ libraries.
              "locale", I18N_NOOP("Translation files for KLocale"),
 --- a/kdecore/kernel/kstandarddirs.cpp
 +++ b/kdecore/kernel/kstandarddirs.cpp
-@@ -165,6 +165,8 @@ xdgconf-menu
+@@ -165,6 +165,8 @@
  menus
  xdgconf-autostart
  autostart
@@ -129,7 +129,7 @@ libraries.
  */
  
  static const char types_string[] =
-@@ -219,6 +221,8 @@ static const char types_string[] =
+@@ -219,6 +221,8 @@
      "menus\0"
      "xdgconf-autostart\0"
      "autostart\0"
@@ -138,7 +138,7 @@ libraries.
      "\0";
  
  static const int types_indices[] = {
-@@ -228,7 +232,7 @@ static const int types_indices[] = {
+@@ -228,7 +232,7 @@
      248,  258,  275,  285,  301,  305,  309,  316,
      326,  336,  354,  359,  377,  387,  403,  416,
      429,  442,  448,  463,  471,  484,  504,  217,
@@ -149,7 +149,7 @@ libraries.
  static void tokenize(QStringList& token, const QString& str,
 --- a/kdecore/kernel/kstandarddirs_unix.cpp
 +++ b/kdecore/kernel/kstandarddirs_unix.cpp
-@@ -40,6 +40,8 @@ QString KStandardDirs::installPath(const
+@@ -40,6 +40,8 @@
                  return QFile::decodeName(KCFG_INSTALL_DIR "/");
              if (strcmp("kdedir", type) == 0)
                  return QFile::decodeName(KDEDIR "/");
@@ -160,7 +160,7 @@ libraries.
              if (strcmp("data", type) == 0)
 --- a/kdecore/kernel/kstandarddirs_win.cpp
 +++ b/kdecore/kernel/kstandarddirs_win.cpp
-@@ -47,6 +47,8 @@ QString KStandardDirs::installPath(const
+@@ -47,6 +47,8 @@
                  return share() + QLatin1String("config.kcfg/");
              if (strcmp("kdedir", type) == 0)
                  return prefix();
@@ -171,7 +171,7 @@ libraries.
              if (strcmp("data", type) == 0)
 --- a/kdecore/util/kpluginloader.cpp
 +++ b/kdecore/util/kpluginloader.cpp
-@@ -113,6 +113,13 @@ QString findLibraryInternal(const QStrin
+@@ -113,6 +113,13 @@
          libname = fileinfo.path() + QLatin1String("/lib") + fileinfo.fileName();
  #endif
  
@@ -187,7 +187,7 @@ libraries.
          if (!kdeinit) {
 --- a/kinit/kinit.cpp
 +++ b/kinit/kinit.cpp
-@@ -499,11 +499,23 @@ static pid_t launch(int argc, const char
+@@ -499,11 +499,23 @@
              // try to match an absolute path to an executable binary (either in bin/ or in libexec/)
              // to a kdeinit module in the same prefix
              if( lib.contains( QLatin1String( "/lib" KDELIBSUFF "/kde4/libexec/" ))) {
