@@ -8,6 +8,7 @@ kde4libs (4:4.8.5-1) UNRELEASED; urgency=low
     - 02_upstream_nepomuk_fix_bde5aad1e9f7bfb6f8d5c60197797de4a315158d.diff
     - 03_upstream_powermanager_fix_05f1a19291af5c16745b76c3e0944c5b80ef5870.diff
     which were taken from upstream.
+  * Refresh patch make_libkdeinit4_private.diff.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 21 Sep 2012 14:02:51 -0300
 
